<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LogInFragment">


    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="177dp"
        android:text="@string/txtAppName"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:labelFor="@string/etEmaillogin"
        android:hint="@string/etEmaillogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLogin"
        style="@style/editText" />

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/etPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailLogin"
        style="@style/editText" />

    <Button
        android:id="@+id/btLogin"
        android:layout_marginTop="16dp"
        android:text="@string/btSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordLogin"
        style="@style/button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtHasnotSignup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />

    <TextView
        android:id="@+id/tvNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtMakeSinup"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>