<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/feedFragmentNav"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="Home"
        android:state_checked="true" />

    <item
        android:id="@+id/profileFragmentNav"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="Perfil" />

</menu>