<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profileFragment"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/tvTitleProfile"
        android:text="@string/txtTitleProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/title" />

    <TextView
        android:id="@+id/tvEmailProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="32dp"
        android:text="@string/txtEmailProfile"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvTitleProfile"
        app:layout_constraintTop_toTopOf="@id/tvTitleProfile" />

    <Button
        android:id="@+id/btSignOut"
        style="@style/button"
        android:layout_marginBottom="120dp"
        android:text="@string/btLogout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>