<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signUpFragment"
    tools:context=".ui.signup.SignUpFragment">

    <TextView
        android:id="@+id/tvTitleSignup"
        android:text="@string/title_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/title" />

    <EditText
        android:id="@+id/etNameSignUp"
        android:layout_marginTop="48dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@string/etNameSignup"
        android:hint="@string/etNameSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleSignup"
        style="@style/editText" />

    <EditText
        android:id="@+id/etEmailSignUp"
        android:layout_marginTop="16dp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:labelFor="@string/etEmailSignup"
        android:hint="@string/etEmailSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameSignUp"
        style="@style/editText" />

    <EditText
        android:id="@+id/etPasswordSignUp"
        android:layout_marginTop="16dp"
        android:hint="@string/etPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailSignUp"
        style="@style/editText" />

    <EditText
        android:id="@+id/etPasswordAgainSignUp"
        android:layout_marginTop="16dp"
        android:hint="@string/etPasswordAgain"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordSignUp"
        style="@style/editText" />

    <Button
        android:id="@+id/btSignUp"
        android:layout_marginTop="16dp"
        android:text="@string/btSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordAgainSignUp"
        style="@style/button" />

</androidx.constraintlayout.widget.ConstraintLayout >